--- a/WindowsFormsBusUsl/WindowsFormsBusUsl/WindowsFormsBusUsl.csproj
+++ b/WindowsFormsBusUsl/WindowsFormsBusUsl/WindowsFormsBusUsl.csproj
@@ -46,22 +46,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bus.cs" />
     <Compile Include="BusGarm.cs" />
     <Compile Include="Direction.cs" />
-    <Compile Include="Door.cs" />
-    <Compile Include="DoorsNumber.cs" />
+    <Compile Include="EasyBus.cs" />
+    <Compile Include="ElementsEnum.cs" />
+    <Compile Include="EllipseForm.cs" />
     <Compile Include="FormBus.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormBus.designer.cs">
       <DependentUpon>FormBus.cs</DependentUpon>
     </Compile>
+    <Compile Include="IDopElement.cs" />
+    <Compile Include="ITransport.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="RectangleForm.cs" />
+    <Compile Include="TriangleForm.cs" />
     <EmbeddedResource Include="FormBus.resx">
       <DependentUpon>FormBus.cs</DependentUpon>
     </EmbeddedResource>
