--- a/WindowsFormsBusUsl/WindowsFormsBusUsl/WindowsFormsBusUsl.csproj
+++ b/WindowsFormsBusUsl/WindowsFormsBusUsl/WindowsFormsBusUsl.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Autovoksal.cs" />
+    <Compile Include="AutovoksalCollection.cs" />
     <Compile Include="Bus.cs" />
     <Compile Include="BusGarm.cs" />
     <Compile Include="Direction.cs" />
