--- a/WindowsFormsBusUsl/WindowsFormsBusUsl/WindowsFormsBusUsl.csproj
+++ b/WindowsFormsBusUsl/WindowsFormsBusUsl/WindowsFormsBusUsl.csproj
@@ -66,6 +66,12 @@
     <Compile Include="FormBus.designer.cs">
       <DependentUpon>FormBus.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormBusConfig.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormBusConfig.Designer.cs">
+      <DependentUpon>FormBusConfig.cs</DependentUpon>
+    </Compile>
     <Compile Include="IDopElement.cs" />
     <Compile Include="ITransport.cs" />
     <Compile Include="Program.cs" />
@@ -82,6 +88,9 @@
     <EmbeddedResource Include="FormBus.resx">
       <DependentUpon>FormBus.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormBusConfig.resx">
+      <DependentUpon>FormBusConfig.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -91,7 +100,6 @@
     <None Include="App.config" />
     <None Include="WindowsFormsBus.csproj" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <None Include="Resources\верх.jpg" />
   </ItemGroup>
@@ -103,6 +111,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\лево.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\квадрат.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\овал.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\треугольник.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
