--- a/WindowsFormsBusUsl/WindowsFormsBusUsl/App.config
+++ b/WindowsFormsBusUsl/WindowsFormsBusUsl/App.config
@@ -1,6 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" throwExceptions="true">
+    <targets>
+      <target name="logfileWarn" xsi:type="File" fileName="D://Logs//file.txt" layout="${uppercase:${level}} | ${logger} | ${message} | ${date:format=dd.MM.yyyy}" />
+      <target name ="logfileInfo" xsi:type="File" fileName="D://Logs//file.txt" />
+      <target name="logfileError" xsi:type="File" fileName="D://Logs//file.txt" layout="${uppercase:${level}} | ${logger} | ${message} | ${date:format=dd.\MM.\yyyy}" />
+      <target name="mail" xsi:type = "Mail" html="true" subject="Error Received" body="${message}" layout="${message}"
+        to="proverka.laboratornoy@mail.ru"
+        from="proverka.laboratornoy@mail.ru"
+        enableSsl="true"
+        smtpUsername="proverka.laboratornoy@mail.ru"
+        smtpPassword="laboratornaya"
+        smtpAuthentication="Basic"
+        smtpServer="smtp.mail.ru"
+        deliveryMethod ="Network"
+        smtpPort="587"/>
+    </targets>
+    <rules>
+      <logger name="*" level="Info" writeTo="logfileInfo" />
+      <logger name="*" level="Warn" writeTo="logfileWarn" />
+      <logger name="*" level="Error" writeTo="logfileError" />
+      <logger name="*" level="Fatal" writeTo="mail" />
+    </rules>
+  </nlog>
 </configuration>
