--- a/WindowsFormsBusUsl/WindowsFormsBusUsl/WindowsFormsBusUsl.csproj
+++ b/WindowsFormsBusUsl/WindowsFormsBusUsl/WindowsFormsBusUsl.csproj
@@ -33,8 +33,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.7.6\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,6 +56,9 @@
   <ItemGroup>
     <Compile Include="Autovoksal.cs" />
     <Compile Include="AutovoksalCollection.cs" />
+    <Compile Include="AutovoksalNotFoundException.cs" />
+    <Compile Include="AutovoksalOccupiedPlaceException.cs" />
+    <Compile Include="AutovoksalOverflowException.cs" />
     <Compile Include="Bus.cs" />
     <Compile Include="BusGarm.cs" />
     <Compile Include="Direction.cs" />
@@ -98,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
     <None Include="WindowsFormsBus.csproj" />
   </ItemGroup>
   <ItemGroup>
