--- a/WindowsFormsBusUsl/WindowsFormsBusUsl/App.config
+++ b/WindowsFormsBusUsl/WindowsFormsBusUsl/App.config
@@ -9,9 +9,8 @@
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" throwExceptions="true">
     <targets>
-      <target name="logfileWarn" xsi:type="File" fileName="D://Logs//file.txt" layout="${uppercase:${level}} | ${logger} | ${message} | ${date:format=dd.MM.yyyy}" />
+      <target name="logfile" xsi:type="File" fileName="D://Logs//file.txt" layout="${uppercase:${level}} | ${logger} | ${message} | ${date:format=dd.MM.yyyy}" />
       <target name ="logfileInfo" xsi:type="File" fileName="D://Logs//file.txt" />
-      <target name="logfileError" xsi:type="File" fileName="D://Logs//file.txt" layout="${uppercase:${level}} | ${logger} | ${message} | ${date:format=dd.\MM.\yyyy}" />
       <target name="mail" xsi:type = "Mail" html="true" subject="Error Received" body="${message}" layout="${message}"
         to="proverka.laboratornoy@mail.ru"
         from="proverka.laboratornoy@mail.ru"
@@ -25,8 +24,7 @@
     </targets>
     <rules>
       <logger name="*" level="Info" writeTo="logfileInfo" />
-      <logger name="*" level="Warn" writeTo="logfileWarn" />
-      <logger name="*" level="Error" writeTo="logfileError" />
+      <logger name="*" tracelevel ="1, 2" writeTo="logfile" />
       <logger name="*" level="Fatal" writeTo="mail" />
     </rules>
   </nlog>
